[metadata]
name = tripleo-repos
summary = A tool for managing tripleo repos
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/tripleo-docs/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    tripleo_repos
data_files =
    etc/tripleo_get_hash/ = tripleo_repos/get_hash/config.yaml
    share/ansible/plugins/modules/ = plugins/modules/*
    share/ansible/plugins/module_utils/ = plugins/module_utils/*

[entry_points]
console_scripts =
    tripleo-repos = tripleo_repos.main:main
    tripleo-yum-config = tripleo_repos.yum_config.__main__:cli_entrypoint
    tripleo-get-hash = tripleo_repos.get_hash.__main__:cli_entrypoint

[pbr]
skip_authors = True
skip_changelog = True
