[metadata]
name = tripleo-get-hash
author = Marios Andreou
author_email = openstack-discuss@lists.openstack.org
description = Get the tripleo build hash for a known RDO named tag. See https://opendev.org/openstack/tripleo-repos/src/branch/master/tripleo-get-hash/README.md#what-is-tripleo-get-hash for more information.
long_description = file: README.md LICENSE
long_description_content_type = text/markdown
url = https://opendev.org/openstack/tripleo-repos/src/branch/master/tripleo-get-hash
project_urls =
    Bug Tracker = https://launchpad.net/tripleo
license_file = LICENSE
license = Apache-2.0
classifiers =
    Programming Language :: Python

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    pyyaml
    requests
tests_require =
    requests_mock

[options.entry_points]
console_scripts =
    tripleo-get-hash = tripleo_get_hash.__main__:cli_entrypoint

[files]
data_files =
    etc/tripleo_get_hash/ = config.yaml
    share/ansible/plugins/modules/ = tripleo_get_hash.py
