[metadata]
name = tripleo-yum-config
author = Douglas Viroel
author_email = openstack-discuss@lists.openstack.org
description = Updates yum configuration files (repo, modules, global configuration).
long_description = file: README.md LICENSE
long_description_content_type = text/markdown
url = https://opendev.org/openstack/tripleo-repos/src/branch/master/tripleo-yum-config
project_urls =
    Bug Tracker = https://launchpad.net/tripleo
license_file = LICENSE
license = Apache-2.0
classifiers =
    Programming Language :: Python

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    tripleo-yum-config = tripleo_yum_config.__main__:cli_entrypoint

[files]
data_files =
    share/ansible/plugins/modules/ = tripleo_yum_config.py
